chore: close calit-z61x
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>